Update Colab jupyter notebook

--- a/playground/Home.ipynb
+++ b/playground/Home.ipynb
@@ -1,22 +1,43 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "source": [
-        "!([ -d .git ] && echo .git || git rev-parse --git-dir > /dev/null 2>&1) || git clone https://github.com/GabrieleMessina/qutes_lang.git\n",
-        "! (cd qutes_lang || cd ../qutes_lang && git pull)\n",
-        "! pip install -r qutes_lang/requirements.txt"
-      ],
+      "cell_type": "markdown",
       "metadata": {
-        "id": "xFEa9oiGWFxS"
+        "id": "a8RYu6sIhJIT"
       },
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "# 🔹🔷 Qutes Playground 🔷🔹\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Welcome to Qutes Playground, here you can easily test the language functionalities, just follow the instructions! 😀"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "xFEa9oiGWFxS"
+      },
+      "outputs": [],
       "source": [
-        "# @title Qutes Playground 🛝🕹️\n",
+        "# @title 🥇 Run This to Initialize!⚡\n",
+        "!([ -d .git ] && echo .git || git rev-parse --git-dir > /dev/null 2>&1) || git clone https://github.com/GabrieleMessina/qutes_lang.git\n",
+        "! (cd qutes_lang || cd ../qutes_lang && git pull)\n",
+        "! pip install -r qutes_lang/requirements.txt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "ZS6rdypcR_PZ"
+      },
+      "outputs": [],
+      "source": [
+        "# @title 🥈 Qutes Playground 🛝🕹️\n",
         "qutes_source_code = \"{}\" # @param {type:\"string\"}\n",
         "if(len(qutes_source_code) == 0):\n",
         "  qutes_source_code = 'string a = \"Hello Qutes!\"; print a;'\n",
@@ -27,16 +48,14 @@
         "f.close()\n",
         "\n",
         "! python 'qutes_lang/src/qutes.py' 'playground_qutes_source.qut'"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "ZS6rdypcR_PZ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": [],
+      "toc_visible": true
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -53,10 +72,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.4"
-    },
-    "colab": {
-      "provenance": [],
-      "toc_visible": true
     }
   },
   "nbformat": 4,
