Update colab jupyter notebook to clear initialization output when finished

--- a/playground/Home.ipynb
+++ b/playground/Home.ipynb
@@ -15,22 +15,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "cellView": "form",
-        "id": "xFEa9oiGWFxS"
+        "id": "xFEa9oiGWFxS",
+        "outputId": "0efdf9be-f0f3-4483-d03f-c2d9294977c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Initialization completed, you can execute the next code block :)\n"
+          ]
+        }
+      ],
       "source": [
         "# @title 🥇 Run This to Initialize!⚡\n",
         "!([ -d .git ] && echo .git || git rev-parse --git-dir > /dev/null 2>&1) || git clone https://github.com/GabrieleMessina/qutes_lang.git\n",
         "! (cd qutes_lang || cd ../qutes_lang && git pull)\n",
-        "! pip install -r qutes_lang/requirements.txt"
+        "! pip install -r qutes_lang/requirements.txt\n",
+        "\n",
+        "from IPython.display import clear_output\n",
+        "clear_output()\n",
+        "! echo 'Initialization completed, you can execute the next code block :)'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
